--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
+    "start": "node server.js"
   },
   "keywords": [
     "nodejs",
@@ -24,5 +24,9 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.1"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
