--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongodb": "^4.7.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1"
+    
   },
   "engines": {
     "node": "14.x",
